update login.ejs and register.ejs

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,5 +1,6 @@
 <%- include('partials/header') %>
-<div class="container col-sm-9 col-lg-6 mt-5">
+
+<div class="container col-sm-9 col-lg-6">
   <h1>Register</h1>
 
   <div class="row">
